k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-api
  namespace: crypto-platform

spec:
  replicas: 2

  selector:
    matchLabels:
      app: crypto-api

  strategy:
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: crypto-api

    spec:
      containers:
        - name: crypto-api
          image: khalil1545/crypto-api:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
