k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-api-ingress
  namespace: crypto-platform
spec:
  ingressClassName: nginx
  rules:
    - host: crypto.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crypto-api-service
                port:
                  number: 8000
